Release GIL when calling into C functions

Author: Daniel P. Berrange <dan@berrange.com>

https://bugzilla.gnome.org/show_bug.cgi?id=629042